[package]
name = "main_lib_test"
version = "0.1.0"
edition = "2021"

[dependencies]
main_lib = { workspace = true }
sub_lib = { workspace = true }
sub_lib_test = { workspace = true }
cucumber = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "uat"
path = "tests/uat.rs"

[[test]]
name = "uat"
harness = false
